DuPont DevSB/src/objects/SiteObjectValue__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique id for subscription center =:  ORGID+CampaignId+email</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastUpdatedLocation__c</fullName>
        <label>LastUpdatedLocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SiteObject__c</fullName>
        <label>Site Object</label>
        <referenceTo>SiteObject__c</referenceTo>
        <relationshipLabel>Site Object Values</relationshipLabel>
        <relationshipName>Site_Object_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site Object Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Email__c</columns>
        <columns>Value__c</columns>
        <columns>LastUpdatedLocation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SiteObject__c</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <columns>ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Object Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>